🔄 Updated model loading paths and improved feature engineering

--- a/Model/Fraud_Detection.ipynb
+++ b/Model/Fraud_Detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1ad64a2a",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
     "        # Combine features\n",
     "        X = pd.concat([structural.reset_index(drop=True), text_df.reset_index(drop=True)], axis=1)\n",
     "\n",
-    "        # ✅ Save feature names to JSON here\n",
+    "        #  Save feature names to JSON here\n",
     "        import json\n",
     "        with open(\"feature_names.json\", \"w\") as f:\n",
     "            json.dump(list(X.columns), f)\n",
